c4prj1_deck/grade.txt
Grading at Wed May 22 16:18:18 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:87:18: error: array subscript is not an integer
     deck -> cards[deck -> cards] = hands[i] -> cards[x];
                  ^
Compilation of deck.c failed

Overall Grade: F
